# band.dev

./: README.md  ROADMAP.txt  manage.py  pyproject.toml
.github/workflows/: tests.yaml
authusers/: apps.py  models.py  schemas.py  services.py  utils.py  views.py
authusers/migrations/: 0001_initial.py  0002_authuser_is_verified.py
authusers/tests/: factories.py
band_dev/: asgi.py  context_processors.py  decorators.py  markdown.py  middleware.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
band_dev/templatetags/: email_filter.py  markdown_filter.py
blogs/: models.py  schemas.py  services.py  utils.py  views.py
blogs/migrations/: 0001_initial.py
blogs/tests/: factories.py
blogs/themes/: __init__.py  default.py
emails/: services.py  templates.py
posts/: models.py  schemas.py  services.py  utils.py  views.py
posts/migrations/: 0001_initial.py  0002_post_tags.py
shops/: models.py
static/css/: auth.css  blog.css  concrete.css  dashboard.css  editor.css  main.css  posts.css
static/js/: audioplayer.js
templates/: about_upgrading.html  base.html  base_blog.html  discover.html  home.html
templates/_partials/: audioplayer.html  navbar.html  post_uploads_list.html  posts_list.html  texteditor.html
templates/authusers/: activate_account.html  dashboard.html  login.html  post_uploads_dashboard.html  posts_dashboard.html  send_activate_account_email.html  settings_dashboard.html  signup.html  subscribers_dashboard.html  theme_dashboard.html
templates/blogs/: base_blog.html  blog_detail.html  list_blog_posts.html  post_detail.html  (+3 more)
(+18 files in other folders)
